--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,8 @@
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: tubing
-  username: root
-  password: 
-  host: localhost
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
